--- a/config/config.json
+++ b/config/config.json
@@ -4,7 +4,7 @@
     "uri": "mongodb://localhost:27017/dev"
   },
   "app": {
-    "serverURL": "http://192.168.0.125:1337/api",
+    "serverURL": "http://localhost:1337/api",
     "appId": "b61f5946-1af3-4e07-9986-9ffd1e36ae93",
     "masterKey": "KlYddh2OdVycHuVBhXv2",
     "appName": "Go.Data"
@@ -22,9 +22,9 @@
       "apiKey": "AIzaSyBk3ARREFLke2Srem4OGT6lGtUuZm5xSQ4"
     },
     "ios": {
-      "pfx": "certs/WHO-TEST.p12",
-      "passphrase": "a",
-      "topic": "com.clarisoft.APNS-Test",
+      "pfx": "certs/cert.p12",
+      "passphrase": "",
+      "topic": "int.who.go-data",
       "bundleId": "",
       "production": false
     }
